syntax = "proto3";
import "Drum.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Drummersoft.DrummerDB.Common.Communication";
package DrumDB;

// a file for database objects to be used by the Drummer Database Service

// a message representing a database contract between a host and a participant
message Contract {
	// the unique contract id
	string contractGUID = 1;
	// the date the contract was generated
	google.protobuf.Timestamp generatedDate = 2;
	// a description of the rights in the contract 
	string description = 3;
	// the schema of the entire database
	Drum.DatabaseSchema schema = 4;
	// a GUID representing the version of the contract
	string contractVersion = 5;
	Host hostInfo = 6;
}

// a message representing information about a participant in the system
message Participant {
	string participantGUID = 1;
	string alias = 2;
	string ip4Address = 3;
	string ip6Address = 4;
	uint32 databasePortNumber = 5;
	bytes token = 6;
}

message Host{
	string hostGUID = 1;
	string hostName = 2;
	string ip4Address = 3;
	string ip6Address = 4;
	uint32 databasePortNumber = 5;
	bytes token = 6;
}